fix: layout problem with emoji icons

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -181,7 +181,6 @@ header {
     animation: 1.5s spin infinite linear;
     display: inline-flex; justify-content: center; align-items: center; width: min-content;
 }
-.icon.emoji.spinner { display: inline-block; }
 
 .breadcrumb {
     padding: 0.1em 0.6em 0.2em;
